Remove duplicate style files and fix broken layout on PC

--- a/style.scss
+++ b/style.scss
@@ -78,6 +78,8 @@ header {
         font-weight: 600;
         line-height: 32px;
         white-space: nowrap;
+
+        text-align: center;
       }
     }
   }
